feat(API): QuoteCase checks link
