# app/serializers/quotes_case_serializer.rb
@@ -2,4 +2,5 @@
 
 class QuotesCaseSerializer < BaseSerializer
   attributes :id, :reference, :status
+  has_many :quote_checks, serializer: QuoteCheckInsideCaseSerializer
 end
