# swagger/v1/mon-devis-sans-oublis_api_v1_partner_swagger.yaml
@@ -1236,6 +1236,12 @@ components:
         metadata:
           "$ref": "#/components/schemas/quote_check_metadata"
           nullable: true
+        quote_checks:
+          type: array
+          items:
+            "$ref": "#/components/schemas/quote_check"
+          description: liste des analyses de devis (QuoteChecks) dans ce dossier
+          nullable: true
       required:
       - id
     stats:
